Add API for fetching news description and url

--- a/sass/_global.scss
+++ b/sass/_global.scss
@@ -19,6 +19,11 @@ html, body {
       padding: $measure 0;
     }
   }
+  /* Body */
+  .news-content {
+    text-align: center;
+    padding: $measure;
+  }
   /* Footer */
   footer {
     text-align: center;
