Create first image and general styling when fetching

--- a/sass/_variables.scss
+++ b/sass/_variables.scss
@@ -1,4 +1,9 @@
+// Website generals
 $background: #000000;
+// Fonts
 $font-color: #FFFFFF;
 $font-size: 10px;
-$measure: 15px;
+// Units of measure
+$gMeasure: 15px;
+$image-width: 100vw;
+$image-height: 10vh;
