--- a/sass/_global.scss
+++ b/sass/_global.scss
@@ -4,30 +4,46 @@ html, body {
     box-sizing: border-box;
     font-size: $font-size + 6;
     max-width: 100%;
+    img { 
+      max-width: 100%;
+      height: auto;
+    }
   }
+
    /* Header */
   .intro-webpage {
     display: flex;
     flex-direction: column;
     align-items: center;
-    padding: ($measure + 20) 0 0 ($measure + 10);
-    height: $measure * 20;
+    padding: ($gMeasure + 20) 0 0 ($gMeasure + 10);
+    height: $gMeasure * 20;
     img {
-      width: $measure * 10;
-      height: $measure * 10;
+      width: $gMeasure * 10;
+      height: $gMeasure * 10;
     }
     p {
-      padding: $measure 0;
+      padding: $gMeasure 0;
     }
   }
+
   /* Body */
-  .news-content {
-    text-align: center;
-    padding: $measure;
-    #image-content {
-      max-width: 100px;
+  section {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    ul {
+      a {
+        text-decoration: none;
+      }
     }
   }
+
+  #image-content {
+    background-size: cover;
+    width: $image-width;
+    height: $image-height;
+  }
+
   /* Footer */
   footer {
     text-align: center;
