--- a/sass/_global.scss
+++ b/sass/_global.scss
@@ -15,14 +15,29 @@ html, body {
     display: flex;
     flex-direction: column;
     align-items: center;
-    padding: ($gMeasure + 20) 0 0 ($gMeasure + 10);
-    height: $gMeasure * 20;
-    img {
-      width: $gMeasure * 10;
-      height: $gMeasure * 10;
+    justify-content: center;
+    // align-content: space-around;
+    padding: ($gMeasure * 3) 0 0 0;
+    height: $gMeasure * 30;
+    .nyt-logo {
+      width: $gMeasure * 15;
+      height: $gMeasure * 15;
     }
     p {
       padding: $gMeasure 0;
+    }
+    .dropdown-section {
+      border-radius: 5px;
+      border: none;
+      padding: $gMeasure / 10;
+      text-align: center;
+    }
+    .preload {
+      display: none;
+      align-self: center;
+      width: $gMeasure * 2.5;
+      height: $gMeasure * 2.5;
+      padding-top: $gMeasure;
     }
   }
 
@@ -31,14 +46,14 @@ html, body {
     display: flex;
     flex-direction: column;
     justify-content: center;
-    ul {
+    .news-content {
       a {
         text-decoration: none;
       }
     }
   }
 
-  #image-content {
+  .image-content {
     background-size: cover;
     width: $image-width;
     height: $image-height;
@@ -46,5 +61,6 @@ html, body {
 
   /* Footer */
   footer {
+    padding: ($gMeasure * 5) 0 0 0;
     text-align: center;
   }
