--- a/sass/_global.scss
+++ b/sass/_global.scss
@@ -6,7 +6,7 @@ html, body {
     max-width: 100%;
     img { 
       max-width: 100%;
-      height: auto;
+      max-height: 100%;
     }
   }
 
@@ -16,9 +16,7 @@ html, body {
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    // align-content: space-around;
-    padding: ($gMeasure * 3) 0 0 0;
-    height: $gMeasure * 30;
+    height: $full-size - 15;
     .nyt-logo {
       width: $gMeasure * 15;
       height: $gMeasure * 15;
@@ -43,24 +41,37 @@ html, body {
 
   /* Body */
   section {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    .news-content {
-      a {
-        text-decoration: none;
+    display: grid;
+    grid-template-columns: repeat(1, 1fr);
+    grid-auto-rows: minmax(1, 12);
+    }
+
+  li {
+    a, a:link, a:visited {
+      text-decoration: none;
+      color: $font-color;
+      .image-content {
+        display:flex;
+        flex-direction: column;
+        justify-content: flex-end;
+        width: $image-width;
+        height: $image-height;
+        background-position: center;
+        background-size: cover;
+        background-repeat: no-repeat;
+        .text-content {
+          background-color: rgba(0, 0, 0, 0.5);
+          padding: ($gMeasure - 5) ($gMeasure / 3);
+          line-height: ($gMeasure + 10);
+        }
       }
     }
   }
 
-  .image-content {
-    background-size: cover;
-    width: $image-width;
-    height: $image-height;
-  }
-
   /* Footer */
   footer {
-    padding: ($gMeasure * 5) 0 0 0;
     text-align: center;
+    p {
+      padding: ($gMeasure * 2.5) 0;
+    }
   }
