--- a/sass/_variables.scss
+++ b/sass/_variables.scss
@@ -1,9 +1,16 @@
 // Website generals
 $background: #000000;
+
 // Fonts
 $font-color: #FFFFFF;
 $font-size: 10px;
+
 // Units of measure
 $gMeasure: 15px;
+$full-size: 100vh;
 $image-width: 100vw;
-$image-height: 10vh;
+$image-height: 350px;
+
+// Breakpoints
+$tabletBreakpoint: 600px;
+$desktopBreakpoint: 1240px;
