--- a/sass/_global.scss
+++ b/sass/_global.scss
@@ -17,9 +17,23 @@ html, body {
     align-items: center;
     justify-content: center;
     height: $full-size - 15;
+    @include tablet {
+      flex-direction: row;
+    }
+    // @include desktop {
+    //   align-items: flex-start;
+    // }
     .nyt-logo {
       width: $gMeasure * 15;
       height: $gMeasure * 15;
+      @include tablet {
+        width: $gMeasure * 10;
+        height: $gMeasure * 10;
+        padding: 0 ($gMeasure * 2) 0 0;
+      }
+      // @include desktop {
+      //   align-self: flex-start;
+      // }
     }
     p {
       padding: $gMeasure 0;
@@ -36,21 +50,30 @@ html, body {
       width: $gMeasure * 2.5;
       height: $gMeasure * 2.5;
       padding-top: $gMeasure;
+      @include tablet {
+        align-self: center;
+      }
     }
   }
 
   /* Body */
-  section {
+section {
+  .news-content {
     display: grid;
     grid-template-columns: repeat(1, 1fr);
-    grid-auto-rows: minmax(1, 12);
+    grid-template-rows: repeat(12, 1fr);
+    @include tablet {
+      grid-template-columns: repeat(3, 1fr);
+      grid-template-rows: repeat(4, 1fr);
     }
+  }
+}
 
   li {
     a, a:link, a:visited {
       text-decoration: none;
       color: $font-color;
-      .image-content {
+      article {
         display:flex;
         flex-direction: column;
         justify-content: flex-end;
@@ -59,7 +82,12 @@ html, body {
         background-position: center;
         background-size: cover;
         background-repeat: no-repeat;
+        @include tablet {
+          width: $image-width / 3;
+          height: $image-height + 100;
+        }
         .text-content {
+          height: $gMeasure * 3;
           background-color: rgba(0, 0, 0, 0.5);
           padding: ($gMeasure - 5) ($gMeasure / 3);
           line-height: ($gMeasure + 10);
