Create specific SASS partials

--- a/sass/style.scss
+++ b/sass/style.scss
@@ -3,4 +3,7 @@
 @import 'breakpoints';
 @import 'newsfetch';
 @import 'fonts';
+@import 'header';
+@import 'section';
+@import 'footer';
 @import 'global';
