--- a/sass/_variables.scss
+++ b/sass/_variables.scss
@@ -12,6 +12,10 @@ $full-size: 100vh;
 $image-width: 100vw;
 $image-height: 350px;
 
+// Header sizing
+$header-mobile: 35vh;
+$tablet-mobile: 20vh;
+
 // Breakpoints
 $tabletBreakpoint: 600px;
 $desktopBreakpoint: 1240px;
