--- a/sass/_global.scss
+++ b/sass/_global.scss
@@ -1,5 +1,5 @@
 html, body {
-    font-family: 'Open Sans', sans-serif;
+    font-family: 'Open Sans';
     font-style: normal;
     font-weight: 300;
     background-color: $background;
