--- a/sass/_header.scss
+++ b/sass/_header.scss
@@ -4,7 +4,7 @@
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    transition: all 0.5s 0.5s ease-in-out;
+    transition: all 1s ease-in-out 0;
     &.default-size {
       height: $full-size - 15;
     }
@@ -21,20 +21,25 @@
       height: $gMeasure * 15;
       }
       @include tablet {
-        width: $gMeasure * 10;
-        height: $gMeasure * 10;
+        width: $gMeasure * 8;
+        height: $gMeasure * 8;
         padding: 0 ($gMeasure * 2) 0 0;
       }
     }
     p {
       padding: $gMeasure 0;
     }
-    .dropdown-section {
-      border-radius: 5px;
-      border: none;
-      padding: $gMeasure / 10;
+    .selector {
       text-align: center;
-    }
+      padding-bottom: 15px;
+      @include tablet {
+        text-align: left;
+      }
+      .dropdown-section {
+        border-radius: 5px;
+        border: none;
+        text-align: center;
+    }}
     .preload {
       display: none;
       align-self: center;
