--- a/sass/style.scss
+++ b/sass/style.scss
@@ -1,8 +1,8 @@
 @import 'reset';
+@import '/fonts/fontstyle.css';
 @import 'variables';
 @import 'breakpoints';
 @import 'newsfetch';
-@import 'fonts';
 @import 'header';
 @import 'section';
 @import 'footer';
