--- a/sass/_global.scss
+++ b/sass/_global.scss
@@ -5,7 +5,7 @@ html, body {
     background-color: $background;
     color: $font-color;
     box-sizing: border-box;
-    font-size: $font-size + 6;
+    font-size: $font-size;
     max-width: 100%;
     img { 
       max-width: 100%;
