--- a/sass/_section.scss
+++ b/sass/_section.scss
@@ -1,6 +1,7 @@
   /* Body */
   section {
     .news-content {
+      width: $image-width;
       display: grid;
       grid-template-columns: repeat(1, 1fr);
       grid-template-rows: repeat(12, 1fr);
@@ -23,7 +24,7 @@
           display:flex;
           flex-direction: column;
           justify-content: flex-end;
-          width: $image-width;
+          width: 100%;
           height: $image-height;
           background-position: center;
           background-size: cover;
