--- a/sass/_variables.scss
+++ b/sass/_variables.scss
@@ -4,7 +4,7 @@ $background: #000000;
 // Fonts
 $font-color: #FFFFFF;
 $footer-color: #C2C2C2;
-$font-size: 10px;
+$font-size: 16px;
 
 // Units of measure
 $gMeasure: 15px;
@@ -14,7 +14,8 @@ $image-height: 350px;
 
 // Header sizing
 $header-mobile: 35vh;
-$tablet-mobile: 20vh;
+$header-tablet: 20vh;
+$header-desktop: 20vh;
 
 // Breakpoints
 $tabletBreakpoint: 600px;
