--- a/sass/_variables.scss
+++ b/sass/_variables.scss
@@ -9,7 +9,7 @@ $font-size: 16px;
 // Units of measure
 $gMeasure: 15px;
 $full-size: 100vh;
-$image-width: 100vw;
+$image-width: 100%;
 $image-height: 350px;
 
 // Header sizing
