--- a/sass/style.scss
+++ b/sass/style.scss
@@ -1,7 +1,7 @@
 @import 'reset';
 @import '/fonts/fontstyle.css';
 @import 'variables';
-@import 'breakpoints';
+@import 'mixin';
 @import 'global';
 @import 'newsfetch';
 @import 'header';
