--- a/sass/_footer.scss
+++ b/sass/_footer.scss
@@ -4,9 +4,9 @@
     text-align: center;
     @include desktop {
       text-align: left;
-      padding-left: $gMeasure * 5;
+      padding-left: $global * 5;
     }
     p {
-      padding: ($gMeasure * 2.5) 0;
+      padding: ($global * 2.5) 0;
     }
   }
