--- a/sass/_variables.scss
+++ b/sass/_variables.scss
@@ -7,15 +7,15 @@ $footer-color: #C2C2C2;
 $font-size: 16px;
 
 // Units of measure
-$gMeasure: 15px;
+$global: 15px;
 $full-size: 100vh;
 $image-width: 100%;
 $image-height: 350px;
 
 // Header sizing
-$header-mobile: 35vh;
-$header-tablet: 20vh;
-$header-desktop: 20vh;
+$header-mobile: 200px;
+$header-tablet: 150px;
+$header-desktop: 150px;
 
 // Breakpoints
 $tabletBreakpoint: 600px;
