--- a/sass/_global.scss
+++ b/sass/_global.scss
@@ -12,3 +12,26 @@ html, body {
       max-height: 100%;
     }
   }
+
+  /* Header on-change classes */
+.new-size {
+  height: $header-mobile;
+  @include tablet {
+      height: $header-tablet;
+  }
+  @include desktop {
+      height: $header-desktop;
+  }
+}
+
+.new-logo {
+  width: $global * 7;
+  height: $global * 7;
+  padding: ($global + 5) 0 0 0;
+  @include tablet {
+      padding: 0 ($global * 3.5) 0 0;
+  }
+  @include desktop {
+      padding: 0 ($global * 3.5) 0 0;
+  }
+}
